# SEO-Article-Generator-Backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: orchestrator.py  outline_agent.py  serp_agent.py  writer_agent.py
app/api/: routes.py
app/core/: config.py  exceptions.py  logging.py
app/models/: schemas.py
app/services/: job_store.py  llm_service.py  quality_scorer.py  serp_service.py
examples/: sample_output.json
tests/: conftest.py  test_integration.py  test_models.py
